add docker compose
